--- a/index.css
+++ b/index.css
@@ -223,7 +223,7 @@ nav a:hover {
 }
 
 .info-section .text-content ul li::before {
-    content: '✅';
+    content: none;
     font-size: 1rem;
     margin-right: 12px;
     margin-top: 4px;
