--- a/index.css
+++ b/index.css
@@ -138,7 +138,7 @@ nav a:hover {
 .hero-text h2 {
   font-size: 1rem;
   font-weight: normal;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .hero-text button {
